macviews: hide click ripples on toolbar buttons

These ripples aren't used on Mac, so set their opacity here to zero.

Bug: 843156
Change-Id: I35d72a965c5344b9e534cf67c2708bfdd5e8f246
Reviewed-on: https://chromium-review.googlesource.com/1080261
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563276}
Former-commit-id: ece05e951124beda1b4aa2defb48475cb190bd2d