chrome/browser/ui/views/page_action/page_action_icon_view.cc
@@ -211,7 +211,7 @@ std::unique_ptr<views::InkDropRipple> PageActionIconView::CreateInkDropRipple()
     const {
   return std::make_unique<views::FloodFillInkDropRipple>(
       size(), GetInkDropCenterBasedOnLastEvent(), GetInkDropBaseColor(),
-      ink_drop_visible_opacity());
+      views::PlatformStyle::kUseRipples ? ink_drop_visible_opacity() : 0);
 }
 
 std::unique_ptr<views::InkDropHighlight>
